--- a/WebApp/webpack-config/tsconfig.json
+++ b/WebApp/webpack-config/tsconfig.json
@@ -3,7 +3,7 @@
   "compileOnSave": true,
   "compilerOptions": {
     "outDir": "./dist",
-    "module": "amd",
+    "module": "commonjs",
     "sourceMap": false
   }
 }
