Fix broken Typescript compilation with Webpack + first working regex

--- a/WebApp/webpack-config/tsconfig.json
+++ b/WebApp/webpack-config/tsconfig.json
@@ -1,9 +1,10 @@
 {
-  "extends": "../tsconfig.json",
   "compileOnSave": true,
   "compilerOptions": {
     "outDir": "./dist",
     "module": "commonjs",
-    "sourceMap": false
+    "moduleResolution": "node",
+    "sourceMap": false,
+    "strict": true
   }
 }
